<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/education_edit_school"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/education_school"/>

    <EditText
        android:id="@+id/education_edit_major"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/education_major"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/education_edit_start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="date"
            android:hint="@string/education_start_date"/>

        <EditText
            android:id="@+id/education_edit_end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="date"
            android:hint="@string/education_end_date"/>

    </LinearLayout>

    <EditText
        android:id="@+id/education_edit_courses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/education_courses"/>

    <TextView
        android:id="@+id/education_delete_btn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="12dp"
        android:text="@string/action_delete"
        style="@style/AppTheme.TextView.DeleteButton"/>



</LinearLayout>