<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/project_edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/project_name"/>


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/project_edit_start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="date"
            android:hint="@string/project_start_date"/>

        <EditText
            android:id="@+id/project_edit_end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="date"
            android:hint="@string/project_end_date"/>

    </LinearLayout>

    <EditText
        android:id="@+id/project_edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/project_description"/>

    <TextView
        android:id="@+id/project_delete_btn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="12dp"
        android:text="@string/action_delete"
        android:padding="@dimen/spacing_small"
        android:background="?attr/selectableItemBackground"
        android:textAllCaps="true"
        android:textColor="#FF4081"
        android:textStyle="bold"/>



</LinearLayout>